feat: init configurations in butterfly

--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ subtitle: 'Hey there~'
 description: 'Im gonna be the best dragon'
 keywords:
 author: lyi61pd
-language: en
+language: zh
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://lyi61pd.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
