--- a/_config.yml
+++ b/_config.yml
@@ -104,3 +104,8 @@ deploy:
   type: git
   repo: git@github.com:lyi61pd/lyi61pd.github.io.git
   branch: main
+
+search:
+  path: search.xml
+  field: post
+  content: true
